--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "minigrep"
+name = "tinygrep"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+description = "A simple implementation of the grep utility."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
